--- a/Node-Red COTEC I4.0 Challenge/package.json
+++ b/Node-Red COTEC I4.0 Challenge/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adaptpack-cell-controller",
+  "name": "cotec-i40-challenge",
   "version": "0.0.1",
   "private": true,
   "engines": {
